add missing reverse-geocode operation
