# controllers/Geocode.js
@@ -1,10 +1,10 @@
 'use strict';
 
 var utils = require('../utils/writer.js');
-var Geocoder = require('../service/GeocoderService');
+var Geocode = require('../service/GeocodeService');
 
 module.exports.geocodeByQueryString = function geocodeByQueryString (req, res, next, q, lon, lat) {
-  Geocoder.geocodeByQueryString(q, lon, lat)
+  Geocode.geocodeByQueryString(q, lon, lat)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -14,7 +14,7 @@ module.exports.geocodeByQueryString = function geocodeByQueryString (req, res, n
 };
 
 module.exports.geocodeByStructuredQuery = function geocodeByStructuredQuery (req, res, next, country, state, city, district, postcode, street, housenumber, lon, lat) {
-  Geocoder.geocodeByStructuredQuery(country, state, city, district, postcode, street, housenumber, lon, lat)
+  Geocode.geocodeByStructuredQuery(country, state, city, district, postcode, street, housenumber, lon, lat)
     .then(function (response) {
       utils.writeJson(res, response);
     })
